infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ops-ingress
  namespace: cloud-ops
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: deriou.com
      http:
        paths:
          - path: /api/v1/ops
            pathType: Prefix
            backend:
              service:
                name: gateway-portal
                port:
                  number: 8080
          - path: /api/v1/gateway
            pathType: Prefix
            backend:
              service:
                name: gateway-portal
                port:
                  number: 8080
          - path: /api/v1/blog
            pathType: Prefix
            backend:
              service:
                name: blog-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
